Week 8 - Add Employee Update Page
Added update page using javascript.

--- a/EmployeeManager/EmployeeManager.Web/EmployeeManager.Web.csproj
+++ b/EmployeeManager/EmployeeManager.Web/EmployeeManager.Web.csproj
@@ -115,6 +115,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Scripts\CustomScripts\employee.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\stylesheet.css" />
     <Content Include="Global.asax" />
@@ -165,6 +166,7 @@
     </Compile>
     <Compile Include="Models\CreateEmployeeModel.cs" />
     <Compile Include="Models\EmployeeDisplayModel.cs" />
+    <Compile Include="Models\UpdateEmployeeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -186,6 +188,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Employee\Update.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
