--- a/EmployeeManager/EmployeeManager.Shared/EmployeeManager.Shared.csproj
+++ b/EmployeeManager/EmployeeManager.Shared/EmployeeManager.Shared.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Orchestrators\EmployeeOrchestrator.cs" />
+    <Compile Include="Orchestrators\ErrorOrchestrator.cs" />
     <Compile Include="Orchestrators\Interfaces\IEmployeeOrchestrator.cs" />
+    <Compile Include="Orchestrators\Interfaces\IErrorOrchestrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DateOfBirthService.cs" />
     <Compile Include="Services\DateTimeService.cs" />
@@ -60,6 +62,7 @@
     <Compile Include="Services\Interfaces\IAnniversaryService.cs" />
     <Compile Include="Services\Interfaces\IDateTimeService.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
+    <Compile Include="ViewModels\ErrorViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
