--- a/EmployeeManager/EmployeeManager.Web/bin/EmployeeManager.Web.dll.config
+++ b/EmployeeManager/EmployeeManager.Web/bin/EmployeeManager.Web.dll.config
@@ -28,6 +28,9 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation"/>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
+    <customErrors mode="On" defaultRedirect="~/Error">
+      
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
